(client) Fix ios overflow scrolling

--- a/client/app/components/comics/Comics.pcss
+++ b/client/app/components/comics/Comics.pcss
@@ -3,4 +3,5 @@
     lost-flex-container: row;
     margin-bottom: 100px;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
